<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_page_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/product_train" />

    <RelativeLayout
        android:id="@+id/material_cp_business_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/iv_material_cp"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="@dimen/content_margin"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_material_cp_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/iv_material_cp"
            android:gravity="center_vertical"
            android:text="@string/cp_bus_train" />

        <ImageView
            android:id="@+id/iv_material_cp_arrow"
            android:layout_width="@dimen/arrow_size"
            android:layout_height="@dimen/arrow_size"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@mipmap/ic_launcher" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/material_page_bg" />

    <RelativeLayout
        android:id="@+id/material_he_edu_layout"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_material_he_edu"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="@dimen/content_margin"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_material_he_edu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/iv_material_he_edu"
            android:gravity="center_vertical"
            android:text="@string/he_edu_version" />

        <ImageView
            android:id="@+id/iv_material_he_edu_arrow"
            android:layout_width="@dimen/arrow_size"
            android:layout_height="@dimen/arrow_size"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@mipmap/ic_launcher" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/common_question" />

    <RelativeLayout
        android:id="@+id/material_common_question_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/iv_material_common_question"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="@dimen/content_margin"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_material_common_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/iv_material_common_question"
            android:gravity="center_vertical"
            android:text="@string/product_question" />

        <ImageView
            android:id="@+id/iv_material_common_question_arrow"
            android:layout_width="@dimen/arrow_size"
            android:layout_height="@dimen/arrow_size"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@mipmap/ic_launcher" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/material_page_bg" />

    <RelativeLayout
        android:id="@+id/material_func_question_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/iv_material_func_question"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="@dimen/content_margin"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_material_func_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/iv_material_func_question"
            android:gravity="center_vertical"
            android:text="@string/he_edu_version" />

        <ImageView
            android:id="@+id/iv_material_func_question_arrow"
            android:layout_width="@dimen/arrow_size"
            android:layout_height="@dimen/arrow_size"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@mipmap/ic_launcher" />
    </RelativeLayout>

</LinearLayout>