<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/login_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_editText_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/bg_login_input"
            android:drawableLeft="@mipmap/icon_phone"
            android:drawablePadding="@dimen/dimen_10"
            android:hint="@string/login_personname_hint"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingBottom="@dimen/padding_5"
            android:paddingLeft="20dp"
            android:paddingTop="@dimen/padding_5"
            android:singleLine="true"
            android:textColorHint="@color/font_hint_gray"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_size_16" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10">

            <Button
                android:id="@+id/btn_authcode"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/shape_btn_login"
                android:padding="@dimen/padding_10"
                android:text="@string/login_get_verify_code"
                android:textColor="@color/font_white"
                android:visibility="visible" />

            <EditText
                android:id="@+id/login_editText_authcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@id/btn_authcode"
                android:background="@mipmap/bg_login_input"
                android:drawableLeft="@mipmap/icon_authcode"
                android:drawablePadding="@dimen/dimen_10"
                android:hint="@string/login_verify_code"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="4"
                android:paddingBottom="@dimen/padding_5"
                android:paddingLeft="20dp"
                android:paddingTop="@dimen/padding_5"
                android:singleLine="true"
                android:textColorHint="@color/font_hint_gray"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_size_16" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@mipmap/bg_login_input">

            <ImageView
                android:id="@+id/iv_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="@mipmap/icon_pwd_show"
                android:padding="10dp"
                android:visibility="gone" />

            <cn.thinkjoy.startup.widget.SearchEditText
                android:id="@+id/login_editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/iv_show_password"
                android:background="@null"
                android:drawableLeft="@mipmap/login_personpwd"
                android:drawablePadding="@dimen/dimen_10"
                android:hint="@string/login_password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingBottom="@dimen/padding_5"
                android:paddingLeft="20dp"
                android:paddingRight="@dimen/dimen_5"
                android:paddingTop="@dimen/padding_5"
                android:singleLine="true"
                android:text=""
                android:textColorHint="@color/font_hint_gray"
                android:textSize="@dimen/font_size_16" />

        </RelativeLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimen_100"
        android:layout_marginLeft="@dimen/dimen_20"
        android:layout_marginRight="@dimen/dimen_20"
        android:background="@mipmap/bg_btn_login"
        android:text="确定"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_18" />

</RelativeLayout>